--- a/src/variables.css
+++ b/src/variables.css
@@ -1,6 +1,17 @@
 :root {
-  --background-color: rgb(239, 236, 229);
+  --background-color: #efece5;
   --padding: 20px;
+  --title-color: #163561;
   --text-color: #333;
+  --content-color: #3a557e;
+  --span-text-color: #efb001;
   --border-color: #ccc;
+  --btn-text-color: #ffffff;
+  --element-color: #99baed;
+  --element-color-hover: #7fa7e2;
+  --shadow-color: #99baed80;
+  --shadow-color-hover: #99baed80;
+
+    --transition-duration: 0.3s;
+    --transition-timing-function: ease-in-out;
 }
