--- a/src/variables.css
+++ b/src/variables.css
@@ -4,9 +4,10 @@
   --title-color: #163561;
   --text-color: #333;
   --content-color: #3a557e;
+  --light-blue-color: #a3c1ef;
   --span-text-color: #efb001;
   --border-color: #ccc;
-  --btn-text-color: #ffffff;
+  --white-color: #ffffff;
   --element-color: #99baed;
   --element-color-hover: #7fa7e2;
   --shadow-color: #99baed80;
