--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,54 +1,70 @@
-.header-nav .logo {
-  display: flex;
-  align-items: center;
-}
-
 .header-nav {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  height: 138px;
+}
+
+.wrapper-logo {
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 20px;
+  height: 112px;
 }
 
 .logo {
+  font-family: Catamaran, sans-serif;
   display: flex;
   align-items: center;
-}
-
-.logo-text {
-  font-family: Catamaran, sans-serif;
+  text-decoration: none;
   font-weight: 600;
   font-size: 40px;
-  line-height: 53.44px;
+  line-height: 3.44px;
+  color: var( --light-blue-color);
+}
+
+.logo-svg {
+ position: relative;
+ bottom: 15px;
+ left: 20px;
 }
 
 .nav-list {
+  margin: 0;
   list-style: none;
   display: flex;
-  margin: 0;
-  padding: 0;
+  padding-left: 110px;
+  gap: 20px;
+  height: 70px;
+  padding-bottom: 20px;
 }
 
 .nav-item {
-  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  width: 93px;
 }
 
-.nav-item a {
+.nav-link {
   text-decoration: none;
+  display: flex;
+  align-items: flex-end;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 33.4px;
   color: var(--text-color);
-  height: 100%;
+}
+
+.nav-item.active{
+  color: var(--white-color);
+  background-color: #a3c1ef;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
 
-.nav-item.active a{
+.nav-item.active .nav-link{
   color: #ffffff;
-  background-color: #a3c1ef;
-  transition-duration: var(--transition-duration);
-  transition-timing-function: var(--transition-timing-function);
-}
-
-.nav-item {
-  /* transition-duration: var(--transition-duration); */
 }
 
 .nav-item:not(.active):hover {
